Increased the delta for leader election

--- a/runtime/mesh1/server0.conf
+++ b/runtime/mesh1/server0.conf
@@ -5,7 +5,7 @@
         "adjacentNodes": {
              "1": {
                 "nodeId": 1,
-                "host": "localhost",
+                "host": "169.254.79.106",
                 "port": 5575,
                 "mgmtPort": 5675
             },
