--- a/runtime/mesh1/server3.conf
+++ b/runtime/mesh1/server3.conf
@@ -5,13 +5,13 @@
         "adjacentNodes": {
          "0": {
                 "nodeId": 0,
-                "host": "localhost",
+                "host": "169.254.79.106",
                 "port": 5570,
                 "mgmtPort": 5670
             },
              "1": {
                 "nodeId": 1,
-                "host": "localhost",
+                "host": "169.254.79.106",
                 "port": 5575,
                 "mgmtPort": 5675
             },
